[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-dimension-of-graphs"
version = "0.1.0"
description = "Compute the (box-counting) fractal dimension of graphs."
readme = "README.md"
authors = [
    { name = "Nero", email = "neroziyuli@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "networkx>=2.8",
    "numpy>=1.24",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/Nero-17/fractal-dimension-of-graphs"

[tool.setuptools]
packages = ["graph_fractal_dimension"]
